[package]
name = "kiyoshi"
version = "0.0.1"
edition = "2021"
authors = ["Aezo Teo <aezo.teo@gmail.com>"]
description = "A tool to run database SQL with YAML configuration"


[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.34", features = ["full"] }
minijinja = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
log = "0.4.22"
env_logger = "0.11.0"
clap = { version = "4.5.24", features = ["derive"] }
cron = "0.14.0"
slack-api-client = "0.1.93"
serde_json = "1.0.138"
